ドラッグ&ドロップを実装

--- a/DragAndDrop/Base.lproj/Main.storyboard
+++ b/DragAndDrop/Base.lproj/Main.storyboard
@@ -35,15 +35,18 @@
                                             <rect key="frame" x="0.0" y="0.0" width="127.99999999999997" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jr8-OF-6us">
-                                                    <rect key="frame" x="30" y="47" width="69" height="35"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jr8-OF-6us">
+                                                    <rect key="frame" x="29.666666666666671" y="46.666666666666657" width="69" height="35"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                            <constraints>
+                                                <constraint firstItem="Jr8-OF-6us" firstAttribute="centerY" secondItem="81W-KY-df4" secondAttribute="centerY" id="RFY-ez-wOs"/>
+                                                <constraint firstItem="Jr8-OF-6us" firstAttribute="centerX" secondItem="81W-KY-df4" secondAttribute="centerX" id="aGy-yD-x7d"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
                                 </cells>
